--- a/package.json
+++ b/package.json
@@ -4,18 +4,35 @@
   "description": "",
   "main": "app/main.jsx",
   "scripts": {
-    "watch": "webpack --progress --colors --watch"
+    "watch": "webpack --progress --colors --watch",
+    "test": "jest",
+    "test-debug": "nodejs --debug-brk  --harmony node_modules/.bin/jest --runInBand"
   },
   "author": "",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "react": "~0.14.7"
+    "react": "~0.14.7",
+    "react-dom": "~0.14.7"
   },
   "devDependencies": {
-    "webpack": "~1.12.12",
     "babel-core": "~6.4.5",
+    "babel-jest": "*",
     "babel-loader": "~6.2.1",
     "babel-preset-es2015": "~6.3.13",
-    "babel-preset-react": "~6.3.13"
+    "babel-preset-react": "~6.3.13",
+    "jest-cli": "*",
+    "react-addons-test-utils": "~0.14.7",
+    "rewire": "~2.5.1",
+    "webpack": "~1.12.12"
+  },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react",
+      "<rootDir>/node_modules/react-dom",
+      "<rootDir>/node_modules/react-addons-test-utils",
+      "<rootDir>/node_modules/fbjs",
+      "<rootDir>/node_modules/rewire"
+    ]
   }
 }
