--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "babel-loader": "~6.2.1",
     "babel-preset-es2015": "~6.3.13",
     "babel-preset-react": "~6.3.13",
+    "copy-webpack-plugin": "^1.1.1",
+    "css-loader": "^0.23.1",
+    "goratchet": "^2.0.2",
     "jest-cli": "*",
     "react-addons-test-utils": "~0.14.7",
-    "rewire": "~2.5.1",
+    "react-ratchet": "^0.5.0",
+    "style-loader": "^0.13.0",
     "webpack": "~1.12.12"
   },
   "jest": {
