--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "babel-preset-react": "~6.3.13",
     "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.1",
+    "file-loader": "^0.8.5",
     "goratchet": "^2.0.2",
     "jest-cli": "*",
+    "less": "^2.6.0",
+    "less-loader": "^2.2.2",
     "react-addons-test-utils": "~0.14.7",
     "react-ratchet": "^0.5.0",
     "style-loader": "^0.13.0",
