--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "watch": "webpack --progress --colors --watch",
     "test": "jest",
-    "test-debug": "nodejs --debug-brk  --harmony node_modules/.bin/jest --runInBand"
+    "test-debug": "nodejs --debug-brk  --harmony node_modules/.bin/jest --runInBand",
+    "webpack-server": "webpack-dev-server --hot --progress --colors --port=8082",
+    "avnav-server": "../avnav/server/avnav_server.py avnav_server.xml"
   },
   "author": "",
   "license": "BSD-2-Clause",
   "dependencies": {
+    "object-assign": "^4.0.1",
     "react": "~0.14.7",
     "react-dom": "~0.14.7"
   },
@@ -24,14 +27,17 @@
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
     "goratchet": "^2.0.2",
+    "history": "^2.0.0",
     "jest-cli": "*",
     "jquery": "^2.2.0",
     "less": "^2.6.0",
     "less-loader": "^2.2.2",
     "react-addons-test-utils": "~0.14.7",
+    "react-hot-loader": "^1.3.0",
     "react-ratchet": "^0.5.0",
     "style-loader": "^0.13.0",
-    "webpack": "~1.12.12"
+    "webpack": "~1.12.12",
+    "webpack-dev-server": "^1.14.1"
   },
   "jest": {
     "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
