--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "babel-loader": "~6.2.1",
     "babel-preset-es2015": "~6.3.13",
     "babel-preset-react": "~6.3.13",
+    "bootstrap": "^3.3.6",
     "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.1",
+    "es6-promise-polyfill": "^1.2.0",
     "file-loader": "^0.8.5",
     "goratchet": "^2.0.2",
     "history": "^2.0.0",
@@ -33,8 +35,9 @@
     "less": "^2.6.0",
     "less-loader": "^2.2.2",
     "react-addons-test-utils": "~0.14.7",
+    "react-addons-update": "^0.14.7",
+    "react-bootstrap": "^0.28.3",
     "react-hot-loader": "^1.3.0",
-    "react-ratchet": "^0.5.0",
     "style-loader": "^0.13.0",
     "webpack": "~1.12.12",
     "webpack-dev-server": "^1.14.1"
