--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jquery": "^2.2.0",
     "less": "^2.6.0",
     "less-loader": "^2.2.2",
+    "openlayers": "^3.13.1",
     "react-addons-test-utils": "~0.14.7",
     "react-addons-update": "^0.14.7",
     "react-bootstrap": "^0.28.3",
