--- a/package.json
+++ b/package.json
@@ -21,14 +21,13 @@
     "babel-core": "~6.4.5",
     "babel-jest": "*",
     "babel-loader": "~6.2.1",
+    "babel-polyfill": "^6.5.0",
     "babel-preset-es2015": "~6.3.13",
     "babel-preset-react": "~6.3.13",
     "bootstrap": "^3.3.6",
     "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.1",
-    "es6-promise-polyfill": "^1.2.0",
     "file-loader": "^0.8.5",
-    "goratchet": "^2.0.2",
     "history": "^2.0.0",
     "jest-cli": "*",
     "jquery": "^2.2.0",
