--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^3.3.6",
     "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "history": "^2.0.0",
     "jest-cli": "*",
