--- a/package.json
+++ b/package.json
@@ -35,11 +35,12 @@
     "jquery": "^2.2.0",
     "less": "^2.6.0",
     "less-loader": "^2.2.2",
+    "material-ui": "^0.14.4",
     "openlayers": "^3.13.1",
     "react-addons-test-utils": "~0.14.7",
     "react-addons-update": "^0.14.7",
-    "react-bootstrap": "^0.28.3",
     "react-hot-loader": "^1.3.0",
+    "react-tap-event-plugin": "^0.2.2",
     "style-loader": "^0.13.0",
     "webpack": "~1.12.12",
     "webpack-dev-server": "^1.14.1"
