--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jquery": "^2.2.0",
     "less": "^2.6.0",
     "less-loader": "^2.2.2",
+    "lodash": "^4.5.0",
     "material-ui": "^0.14.4",
     "openlayers": "^3.13.1",
     "react-addons-test-utils": "~0.14.7",
