--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-es2015": "~6.3.13",
     "babel-preset-react": "~6.3.13",
     "bootstrap": "^3.3.6",
+    "classnames": "^2.2.3",
     "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -36,13 +37,19 @@
     "less": "^2.6.0",
     "less-loader": "^2.2.2",
     "lodash": "^4.5.0",
-    "material-ui": "^0.14.4",
+    "material-design-icons": "^2.2.0",
+    "node-sass": "^3.4.2",
+    "normalize.css": "^3.0.3",
     "openlayers": "^3.13.1",
+    "react-addons-css-transition-group": "^0.14.7",
     "react-addons-test-utils": "~0.14.7",
     "react-addons-update": "^0.14.7",
     "react-hot-loader": "^1.3.0",
     "react-tap-event-plugin": "^0.2.2",
+    "react-toolbox": "^0.14.1",
+    "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
+    "toolbox-loader": "0.0.3",
     "webpack": "~1.12.12",
     "webpack-dev-server": "^1.14.1"
   },
