--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "avnav-server": "../avnav/server/avnav_server.py avnav_server.xml",
     "deploy": "NODE_ENV=production webpack -p"
   },
-  "author": "",
-  "license": "BSD-2-Clause",
+  "author": "Andreas Vogel, andreas@wellenvogel.de",
+  "license": "MIT",
   "dependencies": {
     "object-assign": "^4.0.1",
     "react": "~0.14.7",
@@ -38,6 +38,7 @@
     "less-loader": "^2.2.2",
     "lodash": "^4.5.0",
     "material-design-icons": "^2.2.0",
+    "muicss": "^0.4.6",
     "node-sass": "^3.4.2",
     "normalize.css": "^3.0.3",
     "openlayers": "^3.13.1",
@@ -45,11 +46,10 @@
     "react-addons-test-utils": "~0.14.7",
     "react-addons-update": "^0.14.7",
     "react-hot-loader": "^1.3.0",
+    "react-modal": "^0.6.1",
     "react-tap-event-plugin": "^0.2.2",
-    "react-toolbox": "^0.14.1",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
-    "toolbox-loader": "0.0.3",
     "webpack": "~1.12.12",
     "webpack-dev-server": "^1.14.1"
   },
