--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "gulp": "^3.9.1",
     "history": "^2.0.0",
     "jest-cli": "*",
     "jquery": "^2.2.0",
